Finishing the servicos funcionalities
